[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "karbo"
version = "0.4.0"
description = "Official Python SDK for KarboAI Bot API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "KarboAI" },
]
keywords = ["karbo", "karboai", "bot", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "aiohttp>=3.9",
    "python-socketio[asyncio_client]>=5.10",
]

[project.urls]
Homepage = "https://karboai.com"

[tool.hatch.build.targets.wheel]
packages = ["karbo"]
